--- a/02-clock/style.css
+++ b/02-clock/style.css
@@ -4,15 +4,18 @@
 
 body {
   background-color: #fff;
+  display: flex;
 }
 
 #clock-wrapper {
   position: relative;
   display: block ;
   width: 300px;
-  min-height: 300px;
+  height: 300px;
+  margin: auto;
 
 }
+
 
 #clock-face {
   position: absolute;
@@ -24,26 +27,50 @@ body {
   background-size: 100%;
   background-repeat: no-repeat;
   background-position: center ;
+  z-index: 1;
 
 }
 
-#seconds, #minutes {
-position: absolute;
-  height: 1px;
+#curtain {
+  background-color: rgba(255, 255, 255, .8);
+  position: absolute;
+  width: 99%;
+  min-height: 99%;
+  margin-left: 1%;
+  margin-top: 1%;
+  border-radius: 50%;
+  z-index: 2
+}
+
+#seconds, #minutes, #hours {
+  position: absolute;
   top: 50%;
-   right: 50%;
+  right: 50%;
   transform-origin: 100%;
+  border-radius: 5px;
 
 }
 
 #seconds{
+  height: .5px;
   border: solid rgb(240,116,0) 1px;
   background-color: rgba(240,116,0, .5);
   width: 48%;
+  z-index: 5;
 }
 
 #minutes{
+  height: 1.5px;
   border: solid rgb(240,116,0) 2px;
   background-color: rgba(240,116,0, .5);
   width: 45%;
+  z-index: 6;
+}
+
+#hours{
+  height: 3px;
+  border: solid rgb(240,116,0) 2px;
+  background-color: rgba(240,116,0, .5);
+  width: 30%;
+  z-index: 7;
 }
