--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -3,6 +3,18 @@ body {
   background-size: cover;
 }
 
+
+ header, footer {
+   background-color: rgba(255,255,255,.5) ;
+   color: #000;
+   font-family: 'Roboto', sans-serif;
+ }
+
+ footer a {
+   background-color: inherit ;
+   color: #000;
+ }
+
 .keys {
   min-height: 100vh;
   display: flex;
