--- a/02-clock/style.css
+++ b/02-clock/style.css
@@ -4,14 +4,49 @@
 
 body {
   background-color: #fff;
+  background-image: url(logo.png) ;
+  font-family: 'Indie Flower', cursive;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden ;
+
+}
+
+.container-fluid {
+  display: -ms-flexbox;
+	display: -webkit-flex;
   display: flex;
+  flex-direction: column;
+  margin: -2vh 0 0 -1vh;
+  padding: 0;
+  width: 101vw;
+  height: 101vh;
+  overflow: hidden;
+  background-color: rgba(255,255,255,.9);
+
+}
+
+.header, .footer {
+  width: 100%;
+  display: block;
+  padding: 1em;
+  text-align: center ;
+  color: rgb(240, 116, 0)
+}
+
+.footer {
+  font-size: 12px;
+
+}
+.footer a {
+  color: rgb(240, 116, 0)
 }
 
 #clock-wrapper {
   position: relative;
   display: block ;
-  width: 300px;
-  height: 300px;
+  width: 50vh;
+  height: 50vh;
   margin: auto;
 
 }
@@ -21,9 +56,9 @@ body {
   position: absolute;
   width: 100%;
   min-height: 100%;
-  border: solid rgb(240,116,0) 2px;
+  border: solid rgb(240, 116, 0) 2px;
   border-radius: 50%;
-  background-image: url(logo-clem_00.png);
+  background-image: url(logo.png);
   background-size: 100%;
   background-repeat: no-repeat;
   background-position: center ;
@@ -32,7 +67,7 @@ body {
 }
 
 #curtain {
-  background-color: rgba(255, 255, 255, .8);
+  background-color: rgba(255, 255, 255, .75);
   position: absolute;
   width: 99%;
   min-height: 99%;
