--- a/01-_javaScript_drum_kit/style.css
+++ b/01-_javaScript_drum_kit/style.css
@@ -1,52 +1,58 @@
-body {
-  background-image: url(https://imgur.com/TpZX0qg.png);
+html {
+  font-size: 10px;
+  background: url('https://i.imgur.com/b9r5sEL.jpg') bottom center;
   background-size: cover;
 }
 
-
- header, footer {
-   background-color: rgba(255,255,255,.5) ;
-   color: #000;
-   font-family: 'Roboto', sans-serif;
- }
-
- footer a {
-   background-color: inherit ;
-   color: #000;
- }
+body,html {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
 
 .keys {
-  min-height: 100vh;
   display: flex;
-  flex-direction: row;
+  flex: 1;
+  min-height: 100vh;
   align-items: center;
   justify-content: center;
-
-
 }
+
 .key {
-  background-color: rgba(0,0,0, .5) ;
-  border: solid 1px #000 ;
-  width: 3em;
-  height: 3em;
-  margin: auto;
+  border: .4rem solid black;
+  border-radius: .5rem;
+  margin: 1rem;
+  font-size: 1.5rem;
+  padding: 1rem .5rem;
+  transition: all .07s ease;
+  width: 10rem;
   text-align: center;
-  transition: all .09s;
-}
-
-.key .letter {
-  display: block;
-  color: #fff;
-  font-size: 1.1em
-}
-
-.key .sound {
-  color: yellow;
-  font-size: .7em
+  color: white;
+  background: rgba(0,0,0,0.4);
+  text-shadow: 0 0 .5rem black;
 }
 
 .playing {
   transform: scale(1.1);
-  border: solid 2px yellow;
-  box-shadow: 0 1px yellow
+  border-color: #ffc600;
+  box-shadow: 0 0 1rem #ffc600;
+}
+
+kbd {
+  display: block;
+  font-size: 4rem;
+}
+
+.sound {
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  letter-spacing: .1rem;
+  color: #ffc600;
+}
+
+/*my code*/
+
+.title{
+  text-align: center;
+  background-color: rgba(255,255,255,.75);
 }
