--- a/01_js_drum_kit/style.css
+++ b/01_js_drum_kit/style.css
@@ -13,6 +13,7 @@ body,html {
 .keys {
   display: flex;
   flex: 1;
+  flex-wrap: wrap;
   min-height: 100vh;
   align-items: center;
   justify-content: center;
@@ -52,7 +53,15 @@ kbd {
 
 /*my code*/
 
+
 .title{
   text-align: center;
   background-color: rgba(255,255,255,.75);
+  font-size: large;
+}
+
+@media screen and (min-width: 700px) {
+  /*.title{*/
+    /*font-size: large;*/
+  /*}*/
 }
