--- a/01_js_drum_kit/style.css
+++ b/01_js_drum_kit/style.css
@@ -57,11 +57,11 @@ kbd {
 .title{
   text-align: center;
   background-color: rgba(255,255,255,.75);
-  font-size: large;
+  font-size: x-large;
 }
 
 @media screen and (min-width: 700px) {
-  /*.title{*/
-    /*font-size: large;*/
-  /*}*/
+  .title{
+    font-size: large;
+  }
 }
