--- a/02_clock/style.css
+++ b/02_clock/style.css
@@ -4,8 +4,7 @@
 
 body {
   background-color: #fff;
-  background-image: url(logo.png) ;
-  font-family: 'Indie Flower', cursive;
+  background-image: url(https://source.unsplash.com/wS9hvhqn4XU/1500x1000) ;
   height: 100vh;
   width: 100vw;
   overflow: hidden ;
@@ -22,7 +21,6 @@ body {
   width: 101vw;
   height: 101vh;
   overflow: hidden;
-  background-color: rgba(255,255,255,.9);
 
 }
 
@@ -31,15 +29,15 @@ body {
   display: block;
   padding: 1em;
   text-align: center ;
-  color: rgb(240, 116, 0)
+  color: rgb(255, 255, 255);
 }
 
 .footer {
-  font-size: 12px;
+  font-size: 14px;
 
 }
 .footer a {
-  color: rgb(240, 116, 0)
+  color: rgb(255, 255, 255);
 }
 
 #clock-wrapper {
@@ -56,26 +54,26 @@ body {
   position: absolute;
   width: 100%;
   min-height: 100%;
-  border: solid rgb(240, 116, 0) 2px;
+  border: solid rgb(255, 255, 255) 5px;
   border-radius: 50%;
   background-image: url(logo.png);
-  background-size: 100%;
+  background-size: 10%;
   background-repeat: no-repeat;
   background-position: center ;
   z-index: 1;
 
 }
 
-#curtain {
-  background-color: rgba(255, 255, 255, .75);
-  position: absolute;
-  width: 99%;
-  min-height: 99%;
-  margin-left: 1%;
-  margin-top: 1%;
-  border-radius: 50%;
-  z-index: 2
-}
+/*#curtain {*/
+  /*!*background-color: rgba(255, 255, 255, .75);*!*/
+  /*position: absolute;*/
+  /*width: 99%;*/
+  /*min-height: 99%;*/
+  /*margin-left: 1%;*/
+  /*margin-top: 1%;*/
+  /*border-radius: 50%;*/
+  /*z-index: 2*/
+/*}*/
 
 #seconds, #minutes, #hours {
   position: absolute;
@@ -88,24 +86,24 @@ body {
 
 #seconds{
   height: .5px;
-  border: solid rgb(240,116,0) 1px;
-  background-color: rgba(240,116,0, .5);
+  border: solid rgb(255, 255, 255) 1px;
+  background-color: rgb(255, 255, 255);
   width: 48%;
   z-index: 5;
 }
 
 #minutes{
   height: 1.5px;
-  border: solid rgb(240,116,0) 2px;
-  background-color: rgba(240,116,0, .5);
+  border: solid rgb(255, 255, 255) 2px;
+  background-color: rgb(255, 255, 255);
   width: 45%;
   z-index: 6;
 }
 
 #hours{
   height: 3px;
-  border: solid rgb(240,116,0) 2px;
-  background-color: rgba(240,116,0, .5);
+  border: solid rgb(255, 255, 255) 4px;
+  background-color: rgb(255, 255, 255);
   width: 30%;
   z-index: 7;
 }
