--- a/02_clock/style.css
+++ b/02_clock/style.css
@@ -8,6 +8,8 @@ body {
   height: 100vh;
   width: 100vw;
   overflow: hidden ;
+  background-repeat: no-repeat;
+  background-size: cover;
 
 }
 
@@ -33,7 +35,7 @@ body {
 }
 
 .footer {
-  font-size: 14px;
+  font-size: .9rem;
 
 }
 .footer a {
