--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 #container {
-    width: 98%;
+    width: 95%;
     margin: auto;
     display: flex;
     flex-direction: row;
@@ -19,6 +25,10 @@
 
 #content{
     flex: 0 0 100%;
+    background-color: #cecece;
+    padding: 1rem;
+    margin: 1rem auto;
+    border-radius: 5px;
 }
 
 #cards {
@@ -26,8 +36,9 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    flex: 1;
+    flex: 0 0 100%;
     flex-wrap: wrap;
+    margin: 1rem auto;
     
 }
 
@@ -46,6 +57,19 @@
     flex: 0 0 100%;
     height: max-content;
     padding: 1rem;
+    overflow-wrap: break-word;
+    min-height: 3rem;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    font-size: .75rem;
+}
+
+
+#footer{
+    display: flex;
+    flex: 0 0 100%;
+    margin-top: 5rem;
 }
 
 @media screen and (min-width: 1200px) {
